--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,8 @@ onlyBuiltDependencies:
   - onnxruntime-node
   - protobufjs
   - sharp
+
+overrides:
+  '@isaacs/brace-expansion@<=5.0.0': '>=5.0.1'
+  lodash@>=4.0.0 <=4.17.22: '>=4.17.23'
+  tmp@<=0.2.3: '>=0.2.4'
