--- a/package.json
+++ b/package.json
@@ -57,40 +57,41 @@
     "@fontsource/literata": "^5.2.8",
     "@huggingface/transformers": "^3.8.1",
     "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.16.15",
-    "heic-to": "^1.3.0",
+    "astro": "^5.17.2",
+    "heic-to": "^1.4.2",
+    "markdownlint-cli2": "^0.21.0",
     "sharp": "^0.34.5",
-    "svelte": "^5.48.5",
+    "svelte": "^5.51.2",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.11.0",
+    "@axe-core/playwright": "^4.11.1",
     "@eslint/js": "^9.39.2",
     "@lhci/cli": "^0.15.1",
-    "@playwright/test": "^1.58.0",
+    "@playwright/test": "^1.58.2",
     "@types/hast": "^3.0.4",
-    "@typescript-eslint/parser": "^8.54.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "axe-core": "^4.11.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-astro": "^1.6.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-svelte": "^3.14.0",
-    "html-validate": "^10.7.0",
-    "lighthouse": "^13.0.1",
+    "eslint-plugin-svelte": "^3.15.0",
+    "html-validate": "^10.8.0",
+    "lighthouse": "^13.0.3",
     "markdownlint": "^0.40.0",
     "markdownlint-cli": "^0.47.0",
-    "playwright": "^1.58.0",
+    "playwright": "^1.58.2",
     "postcss-html": "^1.8.1",
-    "prettier": "^3.8.0",
+    "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.4.1",
-    "stylelint": "^17.0.0",
+    "stylelint": "^17.3.0",
     "stylelint-config-standard": "^40.0.0",
     "svelte-eslint-parser": "^1.4.1",
     "terser": "^5.46.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.0"
+    "typescript-eslint": "^8.56.0"
   }
 }
